# CO5625-202425-CLion-Apple-Bugfix

./: CMakeLists.txt  Cities.txt  Competition.cpp  Competition.h  Prototype.cpp  Prototype.h  READ.me  Simulator.cpp  Simulator.h  Sketchbook.cpp  main.cpp
template/: Feedback.cpp  Game.hpp  PrototypeTests.hpp  Requirements.h  SimulatorTests.hpp  Source.cpp  Submit.cpp
